--- a/src/main/res/layout/edit_activity.xml
+++ b/src/main/res/layout/edit_activity.xml
@@ -12,12 +12,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:orientation="horizontal">
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/back"
             android:text="返回"
             android:layout_weight="1"
@@ -25,13 +25,13 @@
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/addPhoto"
             android:layout_weight="1"
             android:text="添加图片"/>
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/addVideo"
             android:text="添加视频"
             android:layout_weight="1"
@@ -39,7 +39,7 @@
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/commit"
             android:text="确定"
             android:layout_weight="1"/>
