--- a/src/main/res/layout/cell.xml
+++ b/src/main/res/layout/cell.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <ImageView
         android:layout_width="wrap_content"
@@ -24,14 +25,16 @@
             android:layout_width="280dp"
             android:layout_height="match_parent"
             android:id="@+id/list_text"
-            android:text="tv"/>
+            android:text="tv"
+            android:textColor="#000000"/>
 
         <TextView
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:id="@+id/list_time"
             android:layout_gravity="right"
-            android:text="tv"/>
+            android:text="tv"
+            android:textColor="#000000"/>
     </LinearLayout>
 
 </LinearLayout>
