--- a/src/main/res/layout/show.xml
+++ b/src/main/res/layout/show.xml
@@ -1,31 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:orientation="horizontal">
-        <Button
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/show_back"
-            android:text="返回"
-            android:layout_weight="1"/>
-        <Button
+            android:src="@drawable/back"
+            android:layout_weight="1"
+            android:background="#00000000"/>
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/show_edit"
-            android:text="编辑"
-            android:layout_weight="1"/>
-        <Button
+            android:src="@drawable/edit"
+            android:layout_weight="1"
+            android:background="#00000000"/>
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/show_delete"
-            android:text="删除"
+            android:background="#00000000"
             android:layout_weight="1"
-            android:background="#ff6633"/>
+            android:src="@drawable/delete"/>
     </LinearLayout>
 
     <ImageView
@@ -42,11 +49,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/show_text" />
+        android:id="@+id/show_text"
+        android:textSize="22dp"
+        android:textColor="#000000"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/show_time"
+        android:textColor="#000000"
         />
 
 </LinearLayout>
